--- a/styles/main.css
+++ b/styles/main.css
@@ -75,11 +75,12 @@ h3 {
 
 .section-image {
     width: 100%;
-    max-height: 200px;
-    object-fit: cover;
+    height: 200px; 
+    object-fit: fill; 
     border-radius: 5px;
     margin-bottom: 15px;
-    border: 2px solid #4a5d3a; /* Olive green */
+    border: 2px solid #4a5d3a;
+    background-color: #2a3a2a; 
 }
 
 /* Lists */
